# ARs_Scandinavia

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
analysis/: ar_pca.qmd  run_analysis.sh  workflow.md
analysis/ar_scandinavia/: pca_utils.py  plots.py  preproccess.py  utils.py
analysis/notebooks/: animate_ar.qmd  ar_downsample.qmd  ar_pca.qmd  artmip.qmd  artmip_nao_groups.qmd  collapsed_ars.qmd  map.qmd  n_cluster_eval.qmd  nao_geopotential.qmd
analysis/scripts/: collapse_tracked_ars.py  fix_shields_calendar.py  fix_tempest_coords.py  gen_artmip_cluster_plots.py  gen_artmip_collapsed_cluster_plots.py  get_guan_walliser_ar_ids.py  get_nao_freqs_artmip.py  precip_to_zarr.py  process_artmip.py  rechunk_era5.py  resample_precip.py  run_artmip_collapse_kmeans.py  run_artmip_kmeans.py  run_artmip_pca.py  track_ars_artmip.py
analysis/tests/: test_preprocess.py
analysis/utils/: pca_utils.py  preproccess.py
egu25_abstract/: egu25_abstract.md
notebooks/: ar_pca.qmd  artmip.qmd
scripts/: rechunk_tp.py
scs_abstract/: main.tex
scs_poster/tex_text/: main.tex
