[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ar_scandinavia"
version = "0.0.1"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["analysis/"]

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
line-length = 88
indent-width = 4

[tool.ruff.lint]

select = ["E", "F", "B", "W", "N", "ANN", "D", "C90"]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/tests/*" = ["E402", "D"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false
exclude = ["tests/*"]
